--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "slugify": "^1.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
